k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: astropa
  labels:
    app: astropa
    environment: base
